--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.0.1",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
+    "sweetalert": "^2.1.2",
     "validator": "^13.11.0"
   }
 }
